--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="image_checklist">TO DO CHECKLIST</string>
     <string name="image_guestlist">GUESTLIST</string>
     <string name="image_delete">DELETE</string>
+    <string name="textview">TextView</string>
 </resources>
